# ShotX

./: .editorconfig  .gitignore  404.html  CNAME  Justfile  Makefile  README.md  ShotX.desktop  index.html  install.sh  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml  test-native-packaging.yml
CAVEATS/: index.html
configuration/custom-uploaders/: index.html
configuration/hotkeys/: index.html
configuration/settings/: index.html
docs/: CAVEATS.md  caveats.md  index.md  install.sh
docs/configuration/: custom-uploaders.md  hotkeys.md  settings.md
docs/features/: annotation.md  capture.md  editor.md  history.md  image_beautifier.md  image_combiner.md  image_effects.md  recording.md  tools.md  upload.md
docs/getting-started/: installation.md  quickstart.md
docs/overrides/: main.html
docs/reference/: architecture.md  cli.md  platform-caveats.md
features/annotation/: index.html
features/capture/: index.html
features/editor/: index.html
features/history/: index.html
features/image_beautifier/: index.html
features/image_combiner/: index.html
features/image_effects/: index.html
features/recording/: index.html
features/tools/: index.html
features/upload/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
overrides/: main.html
packaging/: nfpm.yaml  shotx.desktop  shotx.spec
packaging/flatpak/: io.github.vedeshpadal.ShotX.yaml
packaging/homebrew/: shotx.rb
reference/architecture/: index.html
reference/cli/: index.html
reference/platform-caveats/: index.html
scripts/: build_appimage.sh
search/: search_index.json
src/: index.html
src/shotx/: __init__.py  app.py  main.py
src/shotx/capture/: __init__.py  backend.py  controller.py  factory.py  recorder.py  region_detect.py  wayland.py  x11.py
src/shotx/config/: __init__.py  settings.py
src/shotx/core/: __init__.py  desktop.py  events.py  logging.py  platform.py  tasks.py  xdg.py
src/shotx/data/: shotx.desktop
src/shotx/db/: history.py
src/shotx/output/: __init__.py  clipboard.py  file_saver.py
src/shotx/tools/: controller.py  hash_tool.py  indexer.py  ocr.py  qr.py
src/shotx/ui/: __init__.py  about.py  beautify.py  color_picker.py  directory_indexer.py  editor.py  effects.py  hash_dialog.py  history.py  hotkey_settings_page.py  hotkeys.py  image_history.py  main_window.py  notification.py  overlay.py  pinned.py  qr_display.py  ruler.py  settings_dialog.py  styles.py  task_settings_dialog.py  theme.py  tray.py  welcome_dialog.py
src/shotx/ui/annotations/: __init__.py  items.py  scene.py  toolbar.py
src/shotx/upload/: base.py  controller.py  custom.py  ftp.py  image_hosts.py  s3.py  shortener.py  worker.py
tests/: test_capture_factory.py  test_cli.py  test_controllers.py  test_core.py  test_file_saver.py  test_settings.py
