[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shotx"
version = "0.9.5-beta.2"
description = "A free, open-source screenshot and screen capture tool for Linux — inspired by ShareX."
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [{ name = "Vedesh Padal" }]
keywords = ["screenshot", "screen-capture", "linux", "sharex", "wayland", "x11"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]
dependencies = [
    "PySide6>=6.6",
    "PyYAML>=6",
    "Pillow>=10",
    "dbus-next>=0.2",
    "httpx>=0.28.1",
    "pytesseract>=0.3.13",
    "pyzbar>=0.1.9",
    "qrcode>=8.2",
    "jinja2>=3.1.6",
    "pygobject>=3.54.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    "mypy>=1.0",
    "pytest-qt>=4.5.0",
]
# Optional upload backends
s3 = ["boto3>=1.42.54"]
sftp = ["paramiko>=4.0.0"]
# Install all optional features
all = ["shotx[s3,sftp]"]

[project.scripts]
shotx = "shotx.main:main"

[project.urls]
Homepage = "https://shotx.vedeshpadal.me"
Documentation = "https://shotx.vedeshpadal.me"
Repository = "https://github.com/vedesh-padal/ShotX"
Issues = "https://github.com/vedesh-padal/ShotX/issues"
Changelog = "https://github.com/vedesh-padal/ShotX/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/shotx"]
exclude = [
    "tests",
    ".github",
    "docs",
    "*.sh",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501", # line-length (often subjective)
    "N802", # function name lowercase (Qt overrides use CamelCase)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"] # Common for local dev libs without stubs

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    "mypy>=1.0",
    "pytest-qt>=4.5.0",
]
docs = ["mkdocs-material[imaging]>=9.7.4", "mkdocs-minify-plugin>=0.8.0"]
